Adjust layout to avoid initial scrollbars

--- a/style.css
+++ b/style.css
@@ -6,9 +6,14 @@ body {
     text-align: center;
 }
 
+h1,
+p {
+    margin: 0;
+}
+
 #game-wrapper {
     display: flex;
-    width: 100vw;
+    width: 100%;
     overflow-x: auto;
 }
 
